# NeuralNetwork

./: .gitmodules  ActivationFunction.cpp  ActivationFunction.h  Architecture.cpp  Architecture.h  CMakeLists.txt  DataLoader.cpp  DataLoader.h  LinearLayer.cpp  LinearLayer.h  LossFunction.cpp  LossFunction.h  MNIST.h  Metrics.cpp  Metrics.h  Model.cpp  Model.h  main.cpp
tests/: test_dataloader.cpp
